--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/23/n10243539.md#1" target="_blank">中共淫乱的前生今世（5）公共情妇门</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242901.md#1" target="_blank">组图：各国政要祝贺5.13世界法轮大法日</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/27/n11142951.md#1" target="_blank">共产暴政录：中共鼓励外国残害海外华人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11210435.md#1" target="_blank">“4.25”那天我们一家人站在府右街上</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
