--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10262441.md#1" target="_blank">张敏：王同竹之死——“文革”焚书坑儒一例</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/24/n10509014.md#1" target="_blank">驱除共产 回归传统 华府万人传递希望</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10306820.md#1" target="_blank">【还原史实】 整风运动 魔鬼整人初试啼声</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245419.md#1" target="_blank">长夜尽头 一缕金色的彩霞</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
