--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10306820.md#1" target="_blank">【还原史实】 整风运动 魔鬼整人初试啼声</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245419.md#1" target="_blank">长夜尽头 一缕金色的彩霞</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10003609.md#1" target="_blank">大逃港：哪里有自由，哪里就是我的祖国！</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/10/n4570585.md#1" target="_blank">四川老人两次重伤不治痊愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
