--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/22/n11814019.md#1" target="_blank">夏林：中共是国民党大选惨败的根本原因</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/16/n8107028.md#1" target="_blank">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/22/n10077365.md#1" target="_blank">金剑：阶级斗争是民族毁灭的动力</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/18/n2968768.md#1" target="_blank">一竹：不要再给自己的生命留下遗憾</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
